name:                pow-leaderboard
version:             0.1.0.0
synopsis:            Leaderboard for YSU Math Problem of the Week
-- description:
homepage:            https://github.com/relrod/pow-leaderboard
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable pow-leaderboard
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4 && < 5
                     , bytestring
                     , lens
                     , lucid
                     , taggy
                     , taggy-lens
                     , text
                     , time
                     , transformers
                     , wreq
  default-language:    Haskell2010
